--- a/config/locales/fil_PH.yml
+++ b/config/locales/fil_PH.yml
@@ -382,20 +382,21 @@ fil_PH:
         duplicate_code: "ang code na ito ay nagamit na"
         bill_address: "Billing Address"
         ship_address: "Shipping Address"
-        update_address_success: 'matagumpay na na-update ang address'
-        update_address_error: 'Paunawa! Sagutan lahat ng mga kailangang impormasyon!'
-        edit_bill_address: 'i-edit ang Billing Address'
-        edit_ship_address: 'i-edit ang shipping address'
-        required_fileds: 'ang mga patlang na kailangang may sagot ay may nakalagay na asterisk'
-        select_country: 'Piliin ang bansa'
-        select_state: 'pumili ng Lalawigan'
-        edit: 'i-edit'
-        update_address: 'i-update ang address'
-        confirm_delete: 'siguradong tatanggalin na?'
+        balance: "Balanse"
+        update_address_success: "matagumpay na na-update ang address"
+        update_address_error: "Paunawa! Sagutan lahat ng mga kailangang impormasyon!"
+        edit_bill_address: "i-edit ang Billing Address"
+        edit_ship_address: "i-edit ang shipping address"
+        required_fileds: "ang mga patlang na kailangang may sagot ay may nakalagay na asterisk"
+        select_country: "Piliin ang bansa"
+        select_state: "pumili ng Lalawigan"
+        edit: "i-edit"
+        update_address: "i-update ang address"
+        confirm_delete: "siguradong tatanggalin na?"
         search_by_email: "hanapin gamit ang email/code..."
-        guest_label: 'Guest checkout'
+        guest_label: "Guest checkout"
       destroy:
-        has_associated_orders: 'hindi tagumpay ang pagtanggal: ang customer ay may iniugnay na mga order sa kaniyang shop'
+        has_associated_orders: "hindi tagumpay ang pagtanggal: ang customer ay may iniugnay na mga order sa kaniyang shop"
     contents:
       edit:
         title: nilalaman
@@ -2328,8 +2329,9 @@ fil_PH:
     admin:
       enterprise_limit_reached: "naabot mo na ang pamantayang lmitasyon ng dami ng bilang ng mga enterprise sa bawat account. makipag-ugnayan sa%{contact_email}kung kailangan mo itong dagdagan."
       modals:
-        got_it: nakuha na
+        got_it: "nakuha na"
         close: "isara"
+        continue: "Magpatuloy"
         invite: "mag-imbita"
         invite_title: "mag-imbita ng hindi rehistradong user"
         tag_rule_help:
@@ -2886,6 +2888,7 @@ fil_PH:
     new_taxonomy: "bagong taxonomy"
     back_to_taxonomies_list: "bumalik sa listahan ng mga taxonomy"
     shipping_methods: "mga paraan ng pagpapadala"
+    shipping_method: "paraan ng pagpapadala"
     shipping_categories: "mga kategorya ng pagpapadala"
     new_shipping_category: "bagong kategorya ng pagpapadala"
     back_to_shipping_categories: "bumalik sa mga kategorya ng pagpapadala"
